--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -4,8 +4,8 @@
     {%  for article in latest %}
     <article>
          <section class="box quarter">
-            <div class="date" style="float:right;">
-                <ul class="square half" style="text-align: center;">
+            <div class="date">
+                <ul class="square half" style="padding-left:50%">
                     <li class="month">{{ article.date_published|date:"M" }}</li>
                     <li class="day">{{ article.date_published|date:"d" }}</li>
                 </ul>
