--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -3,7 +3,7 @@
 <section class="main two-thirds">
     {%  for article in latest %}
     <article>
-         <section class="box eight">
+         <section class="box eighth">
             <div class="date">
                 <ul class="square">
                     <li class="month">{{ article.date_published|date:"M" }}</li>
