--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -16,7 +16,7 @@
                 {% endfor %}
             </ul>
         </section>
-        <section class="box seven-eighths">
+        <section class="box three-quarters">
             <h2>{{ article.title }}</h2>
             {{ article.body_html|safe }}
          </section>
