--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1082,6 +1082,10 @@ ul#project-nav {
     background:url('images/corner-bg-bottom-right.png') no-repeat right bottom;
 }
 
+#research .main {
+    background:url('images/corner-bg-top-right.png') no-repeat right top;
+}
+
 #research ul.tags {
     margin: 0;
     padding: 0;
