--- a/futuregreen/templates/research/research_base.html
+++ b/futuregreen/templates/research/research_base.html
@@ -9,7 +9,16 @@
 {% block main %}
 {% endblock main %}
 {% block aside %}
-    <section class="third">
+    <aside class="third">
+        <h2 style="clear:both;" class="box">Article Archive</h2>
+        {% load article_tags %}
+        <h3 class="box">Recent Articles</h3>
+        <ul class="box linked-list">
+        {% get_latest_articles 10 as article_list %}
+        {%  for article in article_list %}
+            <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+        {%  endfor %}
+        </ul>
         <h2 class="box">Projects</h2>
             {% for project in project_list %}
                 <article class="project list box half {% for type in project.project_types.all %}{{ type.name|lower }}&nbsp;{% endfor %}">
@@ -26,15 +35,6 @@
                     </section>
                 </article>
             {% endfor %}
-        <h2 style="clear:both;" class="box">Article Archive</h2>
-        {% load article_tags %}
-        <h3 class="box">Recent Articles</h3>
-        <ul class="box linked-list">
-        {% get_latest_articles 10 as article_list %}
-        {%  for article in article_list %}
-            <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
-        {%  endfor %}
-        </ul>
-    </section>
+    </aside>
 {% endblock aside %}
 {% endblock content %}
