--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -12,10 +12,8 @@
             </div>
         </section>
         <section class="box three-quarters">
-            {% for image in articleimage_set.all %}
-            {% if image.main %}
+            {% for image in article.articleimage_set.all %}
             <img src="{{ image.detail.url }}" title="{{ image.name }}" alt="{{ image.caption }}" />
-            {%  endif %}
             {%  endfor %}
             <h2>{{ article.title }}</h2>
             <ul class="tags">
