--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -11,7 +11,7 @@
                 </ul>
             </div>
         </section>
-        <section class="box three-quarters">
+        <section class="box seven-eighths">
             <h2>{{ article.title }}</h2>
             {% for image in article.articleimage_set.all %}
             {% if image.main %}
