--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -202,6 +202,10 @@ body > footer > .contact {
     width:12.5%; float:left;
 }
 
+.seventh {
+    width:14.28571%; float:left;
+}
+
 .sixth {
     width:16.66667%; float:left;
 }
