--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -246,6 +246,10 @@ body > footer > .contact {
     width:83.33333%; float:left;
 }
 
+.sixth-sevenths {
+    width:85.71428%; float:left;
+}
+
 .seven-eighths {
     width:87.5%; float:left;
 }
