--- a/futuregreen/templates/research/research_base.html
+++ b/futuregreen/templates/research/research_base.html
@@ -21,9 +21,9 @@
         </ul>
         <h3 class="box">Past Articles</h3>
         {% get_article_archive as dates %}
-        <ul class="box linked-list">
+        <ul>
             {% for date in dates %}
-            <li>
+            <li class="box quarter">
                 <a href="{% url article_archive_month year=date|date:"Y", month=date|date:"M" %}" title="{{ date|date:"F Y" }}">
                 <p class="date square">
                     <span class="month">{{ project.date_end|date:"F" }}</span>
