--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -39,9 +39,9 @@
                             {% endif %}
                         {% endfor %}
                     </figure>
-                    <section class="sixth-sevenths">
+                    <section class="sixth-sevenths" style="margin-left:10px;">
                         <h3>{{ item.project.name }}</h3>
-                        <p>{{ item.project.short_description|safe }}</p>
+                        <p style="font-size:.85em;">{{ item.project.short_description|safe }}</p>
                     </section>
 
                 </article>
