--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -39,7 +39,7 @@
                             {% endif %}
                         {% endfor %}
                     </figure>
-                    <section class="sixth-sevenths" style="margin-left:10px;">
+                    <section class="sixth-sevenths" style="padding-left:10px;">
                         <h3>{{ item.project.name }}</h3>
                         <p style="font-size:.85em;">{{ item.project.short_description|safe }}</p>
                     </section>
