--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -400,6 +400,15 @@ article.project.list img {
     display:block;
 }
 
+article.project.related section {
+    padding-left:10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 div.date {
     display:table;
     width:100%;
