--- a/futuregreen/templates/research/research_base.html
+++ b/futuregreen/templates/research/research_base.html
@@ -11,7 +11,7 @@
 {% block aside %}
     <aside class="third">
         <h2 style="clear:both;" class="box">Article Archive</h2>
-        {% load article_tags archive_tags %}
+        {% load article_tags archive_tags taggit_extras %}
         <h3 class="box">Recent Articles</h3>
         <ul class="box linked-list">
         {% get_latest_articles 10 as article_list %}
@@ -26,6 +26,13 @@
             <li><a href="{% url article_archive_month year=date|date:"Y", month=date|date:"M" %}" title="{{ date|date:"F Y" }}">{{ date|date:"F Y" }}</a></li>
             {% endfor %}
         </ul>
+        <h3 class="box">Tags</h3>
+        {% get_taglist as tags for 'research.article' %}
+        <ul class="tags">
+            {% for tag in tags %}
+            <li>{{tag}} ({{tag.num_times}})</li>
+            {% endfor %}
+        <ul>
         <h2 class="box">Research Projects</h2>
             {% for project in project_list %}
                 <article class="project list box half {% for type in project.project_types.all %}{{ type.name|lower }}&nbsp;{% endfor %}">
