--- a/futuregreen/templates/research/article_archive_month.html
+++ b/futuregreen/templates/research/article_archive_month.html
@@ -1,5 +1,5 @@
 {% extends "research/article_list.html" %}
-{% block page_title %}: Articles: {{ year }} : {{ month }} {% endblock page_title %}
+{% block page_title %}: Articles: {{ month|date:"F Y" }} {% endblock page_title %}
 {% block content_title %}
-    <h1>Articles for {{ month|date:"F Y" }}</h1>
+        <h1>Research: {{ month|date:"F Y" }}
 {% endblock content_title %}
