--- a/futuregreen/templates/research/articles_by_tag.html
+++ b/futuregreen/templates/research/articles_by_tag.html
@@ -1,4 +1,5 @@
-{% extends "research/research_base.html" %}
-{% block main %}
-    {{ tag }}
-{% endblock main %}
+{% extends "research/article_list.html" %}
+{% block page_title %}: Articles: {{ tag.name }} {% endblock page_title %}
+{% block content_title %}
+        <h1>Research: {{ tag }}
+{% endblock content_title %}
