--- a/futuregreen/templates/research/article_detail.html
+++ b/futuregreen/templates/research/article_detail.html
@@ -1,36 +1,6 @@
 {% extends "research/research_base.html" %}
 {% block main %}
 <section class="main two-thirds">
-    <article>
-        <section class="box eighth">
-            <div class="date">
-                <ul class="square">
-                    <li class="month">{{ article.date_published|date:"M" }}</li>
-                    <li class="day">{{ article.date_published|date:"d" }}</li>
-                </ul>
-            </div>
-        </section>
-        <section class="box seven-eighths">
-            <h2><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h2>
-            <ul class="tags">
-                {% for tag in article.tags.all %}
-                <li> {{ tag.name }}{% if not forloop.last %}, {% endif %}</li>
-                {% endfor %}
-            </ul>
-            {{ article.body_html|safe }}
-        </section>
-    </article>
+   {% include "research/includes/article.html" %}
 </section>
 {% endblock main %}
-
-{% block js_local %}
-        <script type="text/javascript">
-         $(document).ready(function() {
-            Square();
-        });
-
-        $(window).resize(function() {
-            Square();
-        });
-     </script>
-    {% endblock js_local %}
