editing article templates

--- a/futuregreen/templates/research/article_detail.html
+++ b/futuregreen/templates/research/article_detail.html
@@ -1,4 +1,5 @@
 {% extends "research/research_base.html" %}
+{% block page_title %}: {{ article.name }} {% endblock page_title %}
 {% block main %}
 <section class="main two-thirds">
    {% include "research/includes/article.html" %}
