--- a/futuregreen/templates/research/articles_by_tag.html
+++ b/futuregreen/templates/research/articles_by_tag.html
@@ -1,6 +1,6 @@
 {% extends "research/article_list.html" %}
 {% block page_title %}: Articles: {{ tag.name }} {% endblock page_title %}
 {% block content_title %}
-        <h1>Research</h1>
-        <p>Displaying articles articles tagged with {{ tag }}</p>
+        <h1>Research: {{ tag }}</h1>
+        <p>Articles articles tagged with "{{ tag }}"</p>
 {% endblock content_title %}
