editing article templates

--- a/futuregreen/templates/research/article_archive_month.html
+++ b/futuregreen/templates/research/article_archive_month.html
@@ -1,5 +1,6 @@
 {% extends "research/article_list.html" %}
 {% block page_title %}: Articles: {{ month|date:"F Y" }} {% endblock page_title %}
 {% block content_title %}
-        <h1>Research: {{ month|date:"F Y" }}
+        <h1>Research: {{ month|date:"F Y" }}</h1>
+        <p>Articles from {{ month|date:"F Y" }}</p>
 {% endblock content_title %}
