--- a/futuregreen/templates/research/articles_by_tag.html
+++ b/futuregreen/templates/research/articles_by_tag.html
@@ -2,5 +2,5 @@
 {% block page_title %}: Articles: {{ tag.name }} {% endblock page_title %}
 {% block content_title %}
         <h1>Research: {{ tag }}</h1>
-        <p>Articles articles tagged with "{{ tag }}"</p>
+        <p>Displaying {{ article_list.count }} articles articles tagged with "{{ tag }}"</p>
 {% endblock content_title %}
