--- a/futuregreen/templates/research/includes/article.html
+++ b/futuregreen/templates/research/includes/article.html
@@ -11,7 +11,7 @@
             <h2>{{ article.title }}</h2>
             <ul class="tags">
                 {% for tag in article.tags.all %}
-                <li> {{ tag.name }}{% if not forloop.last %}, {% endif %}</li>
+                <li><a href="{% url articles_by_tag slug=tag.slug %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}</li>
                 {% endfor %}
             </ul>
             {% for image in article.articleimage_set.all %}
