--- a/futuregreen/templates/research/includes/excerpt.html
+++ b/futuregreen/templates/research/includes/excerpt.html
@@ -8,10 +8,10 @@
             </div>
         </section>
         <section class="box three-quarters">
-            <h2>{{ article.title }}</h2>
+            <h2><a href="{{ article.get_absolute_url }}{{ article.title }}</a></h2>
             <ul class="tags">
                 {% for tag in article.tags.all %}
-                <li> {{ tag.name }}{% if not forloop.last %}, {% endif %}</li>
+                <li><a href="{% url articles_by_tag slug=tag.slug %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}</li>
                 {% endfor %}
             </ul>
             {% for image in article.articleimage_set.all %}
