editing article views

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1128,9 +1128,10 @@ ul#project-nav {
     padding: 0;
 }
 
-#research article.article ul.tags li {
+#research article.article ul.tags li a {
     font-size:.85em;
     color:#666;
+    text-decoration: none;
 }
 
 
