--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1128,7 +1128,7 @@ ul#project-nav {
     padding: 0;
 }
 
-#research article.article ul.tags li a {
+#research article.article ul.tags li a:link {
     font-size:.85em;
     color:#666;
     text-decoration: none;
