editing article views

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1128,11 +1128,21 @@ ul#project-nav {
     padding: 0;
 }
 
+#research article.article ul.tags li {
+    font-size:.85em;
+}
+
 #research article.article ul.tags li a:link,
 #research article.article ul.tags li a:visited {
-    font-size:.85em;
     color:#666;
     text-decoration: none;
+}
+
+#research article.article ul.tags li a:hover,
+#research article.article ul.tags li a:active {
+    font-size:.85em;
+    color:inherit;
+    text-decoration: inherit;
 }
 
 
